--- a/feminist_movie_dataset.ipynb
+++ b/feminist_movie_dataset.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load movies from online"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -1316,6 +1323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Seperate the year and the titles\n",
     "movie_titles = []\n",
     "movie_years = []\n",
     "i = 0\n",
@@ -1354,6 +1362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a dataframe of the feminist movies\n",
     "import pandas as pd\n",
     "\n",
     "dict = {'Movie name': movie_titles, 'Year': movie_years} \n",
@@ -1553,6 +1562,7 @@
     }
    ],
    "source": [
+    "# sort by year\n",
     "feminist_movies_df = feminist_movies_df.sort_values('Year')\n",
     "feminist_movies_df"
    ]
@@ -1670,8 +1680,16 @@
     }
    ],
    "source": [
+    "#Keep only the movies that are below 2015\n",
     "feminist_movies_df_below_2015 = feminist_movies_df[feminist_movies_df['Year']<2015]\n",
     "display(feminist_movies_df_below_2015)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load movies from the csv file"
    ]
   },
   {
@@ -1906,8 +1924,16 @@
     }
    ],
    "source": [
+    "# Merge with previous dataset and remove redundant movies\n",
     "all_movies =  pd.merge(feminist_movies_df_below_2015, movies2, on=['Movie name', 'Year'], how='outer')\n",
     "all_movies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merge with the movie metadata and plots"
    ]
   },
   {
@@ -2055,6 +2081,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Add the plots to the movie metadata\n",
     "movie_data_plots = pd.merge(MovieMetadata_df, plot_summaries_df, on='Wikipedia movie ID', how='inner')"
    ]
   },
@@ -2367,12 +2394,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Keep only the feminist movies\n",
     "feminist_movies_plots = pd.merge(movie_data_plots, all_movies, on=['Movie name', 'Year'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2651,7 +2679,7 @@
        "[296 rows x 11 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2659,6 +2687,13 @@
    "source": [
     "feminist_movies_plots"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
