--- a/Jupyter Notebooks/train_feminism_gpt.ipynb
+++ b/Jupyter Notebooks/train_feminism_gpt.ipynb
@@ -13,7 +13,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'helpers'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mhelpers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'helpers'"
+     ]
+    }
+   ],
    "source": [
     "from helpers import *\n",
     "import pandas as pd\n",
@@ -140,14 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import GPT2Tokenizer\n",
     "\n",
     "tokenizer = GPT2Tokenizer.from_pretrained('gpt2')\n",
-    "tokenizer.pad_token = tokenizer.eos_token  # GPT2 does not have a pad token by default"
+    "tokenizer.pad_token = tokenizer.eos_token  # GPT2 does not have a pad token by default\n",
+    "\n",
+    "def tokenize(batch):\n",
+    "    return tokenizer(batch['Summaries'], padding=True, truncation=True, max_length=128)"
    ]
   },
   {
@@ -216,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,9 +257,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gpt_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m num_classes \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m  \u001b[38;5;66;03m# 'spam' or 'ham'\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m model \u001b[38;5;241m=\u001b[39m GPTClassifier(gpt_model, num_classes)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'gpt_model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "num_classes = 2  # 'spam' or 'ham'\n",
     "model = GPTClassifier(gpt_model, num_classes)"
@@ -538,6 +565,13 @@
     "\n",
     "print(classification_report(all_labels, all_preds, target_names=['0', '1']))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
