--- a/Jupyter Notebooks/feminism_analysis_plots.ipynb
+++ b/Jupyter Notebooks/feminism_analysis_plots.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,21 +26,21 @@
     "from collections import Counter\n",
     " \n",
     "# Just fill this with wherever is your main data folder is (copy the path just before 'MovieSummaries'):\n",
-    "file_source = '/Volumes/LaCie/ADA/2024/Projet/'\n",
-    "# file_source = 'D:/EPFL/MA3/Applied Data Analysis/Project/'\n",
+    "# file_source = '/Volumes/LaCie/ADA/2024/Projet/'\n",
+    "file_source = 'D:/EPFL/MA3/Applied Data Analysis/Project/'\n",
     "#\"/Users/Mathieu/Documents/Docs epfl/Semester3/Advanced Data Analysis (ADA)/Test VSCode/ada-2024-project-theadavengers 2/\"\n",
     "\n",
     "# Same goes for the reviews dataset : but simply copy the entire path of where your reviews data is... \n",
-    "reviews_path = '/Users/shrinidhivelan/Downloads/TMDB_movie_dataset_v11.csv'\n",
-    "# reviews_path = 'D:EPFL/MA3/Applied Data Analysis/Project/MovieSummaries/TMDB_movie_dataset_v11.csv'\n",
+    "# reviews_path = '/Users/shrinidhivelan/Downloads/TMDB_movie_dataset_v11.csv'\n",
+    "reviews_path = 'D:EPFL/MA3/Applied Data Analysis/Project/MovieSummaries/TMDB_movie_dataset_v11.csv'\n",
     "#\"/Users/Mathieu/Downloads/reviews dataset/TMDB_movie_dataset_v11.csv\"\n",
     "\n",
     "# replace the following by the direct path of where  [(2) bechdel test dataset] your bechdel test movie data is:\n",
-    "bechdel_path = '/Users/shrinidhivelan/Desktop/DATA ADA Projet/movies.csv'#'/Users/shrinidhivelan/Downloads/movies.csv'\n",
-    "#\"/Users/Mathieu/Downloads/movies.csv\"\n",
+    "# bechdel_path = '/Users/shrinidhivelan/Desktop/DATA ADA Projet/movies.csv'#'/Users/shrinidhivelan/Downloads/movies.csv'\n",
+    "# #\"/Users/Mathieu/Downloads/movies.csv\"\n",
     "\n",
-    "# replace the following by the direct path of where  [(1) feminism dataset] your bechdel test movie data is:\n",
-    "bechdel_path2 = \"/Users/shrinidhivelan/Desktop/DATA ADA Projet/(1) Feminism/movies.csv\"\n",
+    "# # replace the following by the direct path of where  [(1) feminism dataset] your bechdel test movie data is:\n",
+    "# bechdel_path2 = \"/Users/shrinidhivelan/Desktop/DATA ADA Projet/(1) Feminism/movies.csv\"\n",
     "\n",
     "### creating dataset by extracting the main CMU data ###\n",
     "MovieMetadata_df, CharacterMetadata_df, names_df, plot_summaries_df, tvTropes_df, merged_Movie = create_datasets(file_source, reviews_path)\n",
@@ -55,13 +55,13 @@
     "movie_names_summaries_df = pd.merge(plot_summaries_df, MovieMetadata_df, on='Wikipedia movie ID', how='left')\n",
     "movie_names_character_df = pd.merge(CharacterMetadata_df, MovieMetadata_df, on='Wikipedia movie ID', how='left')\n",
     "\n",
-    "### Bechdel data - the scores of the bechdel tests\n",
-    "bechdel_2= pd.read_csv(bechdel_path2)\n",
-    "Movie_data_bechdel_notation_df = pd.merge(MovieMetadata_df, bechdel_2[[\"title\", \"year\", \"bt_score\"]], left_on=\"Movie name\", right_on=\"title\", how=\"inner\")\n",
+    "# ### Bechdel data - the scores of the bechdel tests\n",
+    "# bechdel_2= pd.read_csv(bechdel_path2)\n",
+    "# Movie_data_bechdel_notation_df = pd.merge(MovieMetadata_df, bechdel_2[[\"title\", \"year\", \"bt_score\"]], left_on=\"Movie name\", right_on=\"title\", how=\"inner\")\n",
     "\n",
-    "### Data to do labels for model (using texts):\n",
-    "summaries_bechdel_movies_df = pd.merge(plot_summaries_df, Movie_data_bechdel_notation_df, on='Wikipedia movie ID', how='inner')\n",
-    "summaries_label = summaries_bechdel_movies_df[['Summaries', 'Movie name', 'bt_score']]"
+    "# ### Data to do labels for model (using texts):\n",
+    "# summaries_bechdel_movies_df = pd.merge(plot_summaries_df, Movie_data_bechdel_notation_df, on='Wikipedia movie ID', how='inner')\n",
+    "# summaries_label = summaries_bechdel_movies_df[['Summaries', 'Movie name', 'bt_score']]"
    ]
   },
   {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "improt plotly.graph_objects\n",
+    "import plotly.graph_objects as go\n",
     "\n",
     "df = movie_dataset.copy()\n",
     "# Predict on all movies\n",
@@ -321,7 +321,42 @@
     "# Display the plot\n",
     "plt.xticks(rotation=90, fontsize=10)\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Linear regression GPT\n",
+    "x_gpt = merged_counts['Year']\n",
+    "y_gpt = merged_counts['feminist_percentage']\n",
+    "x_plot_gpt = x_gpt[17:len(x_gpt)]\n",
+    "y_plot_gpt = y_gpt[17:len(x_gpt)]\n",
+    "slope_gpt, intercept_gpt = np.polyfit(x_plot_gpt, y_plot_gpt, 1)  # Fit a linear regression line\n",
+    "\n",
+    "# GPT Line Plot\n",
+    "fig_gpt_line = go.Figure()\n",
+    "fig_gpt_line.add_trace(go.Scatter(x=x_plot_gpt, y=y_plot_gpt, mode='lines+markers', name='GPT: Feminist Movie %', marker=dict(color='lightgray')))\n",
+    "fig_gpt_line.add_trace(go.Scatter(x=x_plot_gpt, y=slope_gpt * x_plot_gpt + intercept_gpt, mode='lines', name=f'Linear Regression (slope={slope_gpt:.2f})', line=dict(dash='dot', color='salmon')))\n",
+    "\n",
+    "fig_gpt_line.write_html(\"feminism_linear_regression.html\")\n",
+    "\n",
+    "# GPT bar plot\n",
+    "fig_gpt = go.Figure()\n",
+    "# Plot total movies (light gray)\n",
+    "fig_gpt.add_bar(\n",
+    "    x=x_gpt,\n",
+    "    y=y_gpt,\n",
+    "    name='Total Movies',\n",
+    "    marker_color='gray'\n",
+    ")\n",
+    "\n",
+    "# Plot feminist movies (salmon), overwriting part of total movies\n",
+    "fig_gpt.add_bar(\n",
+    "    x=x_gpt,\n",
+    "    y=y_gpt,\n",
+    "    name='Feminist Movies',\n",
+    "    marker_color='salmon'\n",
+    ")\n",
+    "\n",
+    "fig_gpt.write_html(\"feminism_percentage.html\")\n",
+    "\n"
    ]
   },
   {
