--- a/Jupyter Notebooks/train_feminism_gpt_movie_dataset.ipynb
+++ b/Jupyter Notebooks/train_feminism_gpt_movie_dataset.ipynb
@@ -217,7 +217,7 @@
     "non_feminist = non_feminist.drop(columns = ['bt_score'])\n",
     "non_feminist = non_feminist.sample(n=296, random_state=42)  # random_state ensures reproducibility\n",
     "\n",
-    "feminism_movies = pd.read_csv(\"feminist_movies_plots.csv\")\n",
+    "feminism_movies = pd.read_csv(\"Prediction csv files/feminist_movies_plots.csv\")\n",
     "feminist = feminism_movies[['Summaries', 'Movie name']]\n",
     "feminist['feminism'] = 1\n",
     "\n",
@@ -230,7 +230,12 @@
     "# If you want to reset the index after shuffling (optional):\n",
     "result.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "display(result)"
+    "import pandas as pd\n",
+    "from gpt.feminism_gpt_classifier import train_feminism_classifier\n",
+    "\n",
+    "\n",
+    "# Train the model\n",
+    "model, metrics = train_feminism_classifier(result, name='feminism_classifier.bin')"
    ]
   },
   {
