changed final notebook

--- a/Notebook_final.ipynb
+++ b/Notebook_final.ipynb
@@ -835,6 +835,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train the GPT2 model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -874,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -882,10 +889,10 @@
      "evalue": "name 'movie_names_summaries_df' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 18\u001b[0m\n\u001b[1;32m     15\u001b[0m bool_new_predictions \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;01mTrue\u001b[39;00m \u001b[38;5;28;01mif\u001b[39;00m prediction \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m \u001b[38;5;28;01mfor\u001b[39;00m prediction \u001b[38;5;129;01min\u001b[39;00m new_predictions]\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# Add the predictions as a new column to the dataframe\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m movie_names_summaries_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprediction\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m bool_new_predictions\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# Count the total number of movies per year\u001b[39;00m\n\u001b[1;32m     21\u001b[0m count_per_year_all \u001b[38;5;241m=\u001b[39m movie_names_summaries_df\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYear\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39msize()\u001b[38;5;241m.\u001b[39mreset_index(name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtotal_movies\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'movie_names_summaries_df' is not defined"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m bool_new_predictions \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;01mTrue\u001b[39;00m \u001b[38;5;28;01mif\u001b[39;00m prediction \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m \u001b[38;5;28;01mfor\u001b[39;00m prediction \u001b[38;5;129;01min\u001b[39;00m new_predictions]\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# Add the predictions as a new column to the dataframe\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m movie_names_summaries_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprediction\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m bool_new_predictions\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# Count the total number of movies per year\u001b[39;00m\n\u001b[0;32m     21\u001b[0m count_per_year_all \u001b[38;5;241m=\u001b[39m movie_names_summaries_df\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYear\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39msize()\u001b[38;5;241m.\u001b[39mreset_index(name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtotal_movies\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'movie_names_summaries_df' is not defined"
      ]
     }
    ],
@@ -1167,6 +1174,50 @@
     "\n",
     "plot2 = fig\n",
     "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Apply a linear regression to determine a tendency***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "# Define the variables for the lienar regression\n",
+    "X_linear = merged_counts['feminist_percentage'].index\n",
+    "X_linear = np.array(X_linear)\n",
+    "X_linear = X_linear.reshape(-1, 1)\n",
+    "y_linear = merged_counts['feminist_percentage'].values\n",
+    "\n",
+    "# Define and fit the linear regression model\n",
+    "lin_model = LinearRegression()\n",
+    "lin_model.fit(X_linear, y_linear)\n",
+    "\n",
+    "# Predict using the linear regression model\n",
+    "y_linear_pred = lin_model.predict(X_linear)\n",
+    "\n",
+    "# Compute the correlation coefficient \n",
+    "corr = np.corrcoef(X_linear.flatten(), y_linear)\n",
+    "print(\"Correlation coefficient :\", corr[0,1])\n",
+    "\n",
+    "# Visualization\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.scatter(X_linear, y_linear, color='orange', label='Data')\n",
+    "plt.plot(X_linear, y_linear_pred, color='green', label='Linear Fit')\n",
+    "plt.title('Linear Regression of Normalized Feminist Movies per Year')\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylabel('Proportion of Movies')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
     "plt.show()"
    ]
   },
@@ -4152,7 +4203,8 @@
     "movies_per_genre = movies_per_genre.loc[\n",
     "    (movies_per_genre.index.get_level_values('Year') >= 1940) &\n",
     "    (movies_per_genre.index.get_level_values('Year') < 2008)\n",
-    "]"
+    "]\n",
+    "\n"
    ]
   },
   {
